# rop_report

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.bat  run.sh  tsconfig.base.json
.github/workflows/: ci.yml
api/: Dockerfile  jest.config.js  package.json  tsconfig.json
api/src/: app.module.ts  main.ts
api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  current-user.decorator.ts  dto.ts  jwt-auth.guard.ts  jwt.strategy.ts  roles.decorator.ts  roles.guard.ts
api/src/capture/: capture.module.ts  (+4 more)
api/test/: auth-rls.e2e.ts  capture.e2e.ts  dashboard-plans.e2e.ts  integrations.e2e.ts  reports.e2e.ts
db/: package.json  tsconfig.json
db/prisma/: rls.test.ts  schema.prisma  seed.ts
db/seed-data/: _manifest.json  activities.json  activity_types.json  bit_vocabulary.json  casing.json  contractors.json  dhmotor_types.json  fields.json  formations.json  hole_sizes.json  jar_types.json  lithology.json  material_types.json  materials.json  mud_types.json  nozzle_sizes.json  operations.json  owners.json  reason_pulled.json  well_profiles.json  well_situations.json  well_types.json
docs/: data-model.md  domain-formulas.md  phases.md  spec.md
migration/: README.md  etl.py  requirements.txt  source_schema.txt  target_columns.tsv  target_constraints.tsv  target_rls.tsv
ml/: README.md  pyproject.toml
ml/app/: main.py
ml/tests/: test_health.py
web/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
(+59 files in other folders)
