[project]
name = "drilliq-ml"
version = "0.1.0"
description = "DrillIQ ML service (DEFERRED — Phase 7). Health-check placeholder only."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    # deferred: Phase 7 ML — RF/SVM/KNN/NN/regression
    # "scikit-learn>=1.5",
    # "pandas>=2.2",
    # "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
